# tree-sitter-august

./: Cargo.toml  binding.gyp  grammar.js  main.august  package-lock.json  package.json  parser.exp  parser.lib
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
