[package]
name = "tree-sitter-august"
description = "August grammar for the tree-sitter parsing library"
version = "0.0.2"
keywords = ["incremental", "parsing", "august"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ScratchCat458/tree-sitter-august"
edition = "2018"
license = "MIT"
authors = ["Hayden Brown <scratchcat458@gmail.com>"]

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
